kubernetes/apps/immich/stefanos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-stefanos
  namespace: immich
spec:
  selector:
    app: immich-stefanos
  ports:
    - port: 2283
      targetPort: 2283
